# plaud-tm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.js  package-lock.json  package.json  tarpaulin-report.md  tarpaulin.txt  tsconfig.json
.github/workflows/: release.yml
scripts/: make-executable.js
src/: cli.rs  cli.ts  cli.tsx  constants.rs  constants.ts  errors.ts  index.ts  lib.rs  main.rs  merge.rs  merge.ts  transcript.rs  transcript.ts  types.ts  update.rs  update.ts
src/commands/: merge.ts  update.ts
src/components/: App.tsx  MergeCommand.tsx  UpdateCommand.tsx
src/utils/: fileio.ts  validation.ts
tests/: cli.test.ts  merge.test.ts  merge_cli.rs  transcript.test.ts  update.test.ts  update_cli.rs
