[package]
name = "plaud-timestamp"
version = "0.1.0"
edition = "2021"
authors = ["vultuk <vultuk@example.com>"]
autobins = false

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
thiserror = "1"
glob = "0.3"
tempfile = "3"

[workspace]
resolver = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"

[[bin]]
name = "plaud-tm"
path = "src/main.rs"
